# SMOO-Plus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Dockerfile  Makefile  MakefileNSO  README.md  SMOO-Plus100.nso  TODO.md  doc.html  docker-build.sh  downloads.html  features.html  index.html  notes.md  romfs.rar  styles.css
.github/workflows/: build.yml  dev-release.yml  release.yml
config/: ModuleList.sym  VersionList.sym  config.cmake  npdm.json
hudassets/: FrozenOverlay.psd  PlayerIcon.psd  RoundTimerClock.psd  ScoreEvent.psd  SpectateHeader.psd  TeamHeaders.psd  Wipeout.psd
include/: Keyboard.hpp  SocketBase.hpp  aarch64  agl  al  debugMenu.hpp  eui  game  helpers.hpp  logger.hpp  main.hpp  nn  nvn  nvnTool  sead  vapours
include/actors/: PuppetActor.h  PuppetCapActor.h  PuppetHackActor.h
include/al/: alCollisionUtil.h  util.hpp
include/algorithms/: CaptureAnims.h  CaptureTypes.h  PlayerAnims.h
include/cameras/: CameraPoserActorSpectate.h  CameraVerticalAbsorber2DGalaxy.h
include/layouts/: FreezeTagChaserSlot.h  FreezeTagIcon.h  FreezeTagRunnerSlot.h  HideAndSeekIcon.h  HotPotatoChaserSlot.h  HotPotatoIcon.h  HotPotatoRunnerSlot.h  InfectionIcon.h  LayoutPlayerList.h  NameTag.h  SardineIcon.h  SpeedrunIcon.h
include/packets/: FreezeInf.h  GameModeInf.h  Packet.h  PlayerConnect.h  PlayerInfPacket.h
include/puppets/: HackModelHolder.hpp  PuppetHolder.hpp  PuppetInfo.h
linkerscripts/: symstemp.ld
patches/: codehook.slpatch
scripts/: sendPatch.py
source/: Client.cpp  Keyboard.cpp  debugMenu.cpp  helpers.cpp  hooks.cpp  hooksCoinRunner.cpp  hooksFreezeTag.cpp  hooksGamemodes.cpp  hooksHotPotato.cpp  main.cpp
src/: helpers.h  main.cpp
src/menu/: Menu.h  (+5 more)
syms/: custom.sym  nvn.sym  test.sym
sys/: .gitignore  README.md
sys/addons/DebugRenderer/: CMakeLists.txt
sys/addons/DebugRenderer/data/: font.hkf  shader_fsh.glsl  shader_vsh.glsl
sys/addons/DebugRenderer/include/hk/gfx/: DebugRenderer.h  Font.h
sys/addons/DebugRenderer/src/hk/gfx/: DebugRenderer.cpp  DebugRendererImpl.cpp  Font.cpp
sys/addons/DebugRenderer/tools/: generate_font.py
sys/addons/Nvn/: CMakeLists.txt
sys/addons/Nvn/include/hk/gfx/: Nvn.h  Shader.h  Texture.h  Util.h  Vertex.h
sys/addons/Nvn/include/hk/nvn/: MemoryBuffer.h  nvn_CppMethods.h
sys/addons/Nvn/src/hk/gfx/: ShaderImpl.cpp  TextureImpl.cpp
sys/addons/Nvn/src/hk/nvn/: nvn_CppFuncPtrImpl.cpp
sys/addons/Nvn/tools/: compile_shader.py
sys/hakkun/: CMakeLists.txt
sys/hakkun/include/hk/: Result.h  types.h
sys/hakkun/include/hk/diag/: diag.h  results.h
sys/hakkun/include/hk/hook/: InstrUtil.h  MapUtil.h  Replace.h  Trampoline.h  results.h
sys/hakkun/include/hk/init/: module.h
sys/hakkun/include/hk/os/: Mutex.h
sys/hakkun/include/hk/ro/: RoModule.h  RoUtil.h  results.h
sys/hakkun/include/hk/sail/: detail.h  init.h
sys/hakkun/include/hk/svc/: api.h  types.h
sys/hakkun/include/hk/util/: Algorithm.h  BitArray.h  Context.h  FixedCapacityArray.h  Lambda.h  Math.h  PoolAllocator.h  Random.h  Singleton.h  Storage.h  TemplateString.h  hash.h
sys/hakkun/include/rtld/: ModuleHeader.h  RoModule.h  RoModuleList.h  elf.h  types.h
sys/hakkun/sail/: CMakeLists.txt
sys/hakkun/sail/include/: config.h  fakelib.h  hash.h  parser.h  symbol.h  types.h  util.h
sys/hakkun/sail/src/: config.cpp  fakelib.cpp  main.cpp  parser.cpp
sys/hakkun/src/hk/diag/: diag.cpp
sys/hakkun/src/hk/hook/: MapUtil.cpp  Trampoline.cpp
sys/hakkun/src/hk/init/: module.S  module.cpp
sys/hakkun/src/hk/os/: Libcxx.cpp
sys/hakkun/src/hk/ro/: RoModule.cpp  RoUtil.cpp
sys/hakkun/src/hk/sail/: detail.cpp  init.cpp
sys/hakkun/src/hk/svc/: api.aarch64.S  api.armv7a.S
sys/hakkun/src/hk/util/: Context.cpp
sys/hakkun/src/rtld/: DummyRtld.cpp  RoModule.cpp
(+477 files in other folders)
